--- a/Website/app/webroot/css/style.css
+++ b/Website/app/webroot/css/style.css
@@ -973,7 +973,7 @@ h3.heading-section:before {
   transition: 0.3s;
 }
 .btn.btn-primary {
-  background: #79c34f;
+  background: #990000;
   color: #fff;
   border: none !important;
   border: 2px solid transparent !important;
