--- a/Website/app/webroot/css/test/set1.css
+++ b/Website/app/webroot/css/test/set1.css
@@ -23,10 +23,8 @@
 	position: relative;
 	float: left;
 	overflow: hidden;
-	margin: 10px 1%;
-	min-width: 165px;
+	margin: 10px;
 	max-width: 165px;
-        min-height: 210px;
         max-height: 210px;
 	width: 48%;
 	background: #f2f2f2;
