--- a/Website/app/webroot/css/style.css
+++ b/Website/app/webroot/css/style.css
@@ -396,6 +396,30 @@ figure {
   color: #fff !important;
 }
 
+#fh5co-logo-ish {
+  position: relative;
+  z-index: 2;
+  font-size: 26px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 0px;
+  font-weight: bold;
+  float: left;
+}
+@media screen and (max-width: 768px) {
+  #fh5co-logo-ish {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+}
+#fh5co-logo-ish a {
+  color: #fff;
+}
+#fh5co-logo-ish a:hover, #fh5co-logo-ish a:focus {
+  color: #fff !important;
+}
+
 #fh5co-menu-wrap {
   position: relative;
   z-index: 2;
@@ -404,6 +428,16 @@ figure {
 }
 #fh5co-menu-wrap .sf-menu a {
   padding: 2em .75em;
+}
+
+#fh5co-menu-wrap-ish {
+  position: relative;
+  z-index: 2;
+  display: block;
+  float: right;
+}
+#fh5co-menu-wrap-ish .sf-menu a {
+  padding: 0em .75em;
 }
 
 #fh5co-primary-menu > li > ul li.active > a {
