mobile view for hero-ish layouts fixed

--- a/Website/app/webroot/css/style.css
+++ b/Website/app/webroot/css/style.css
@@ -1053,6 +1053,12 @@ h3.heading-section:before {
   }
 }
 
+@media screen and (max-width: 768px) {
+  #fh5co-menu-wrap-ish {
+    display: none;
+  }
+}
+
 #offcanvas-menu {
   position: absolute;
   top: 0;
